Make sure that footer is aligned  for all pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -259,6 +259,10 @@ ul#social-network a:hover {
     padding: 10px;
 }
 
+.add-margin{
+    margin-bottom: 20px;
+ }
+
 /* Media query: large and landscape phones (576px and up) */
 @media screen and (min-width: 576px) {}
 
